# http_normalizer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  state.cpp
http_normalizer/: CMakeLists.txt
http_normalizer/examples/: CMakeLists.txt  example.cpp
http_normalizer/include/: http_tokenizer.hpp
http_normalizer/include/http_normalizer/public/: extra.hpp  http_normalizer.hpp
http_normalizer/lib/http_normalizer_parts/http_parts/tests/: httparts_test.cpp
http_normalizer/src/: http_normalizer.cpp
http_normalizer/tests/: CMakeLists.txt  http_normalizer_test.cpp
include/: extra.hpp  http_normalizer.hpp
php-extension/: CMakeLists.txt  Makefile  index.php  libphp_http_normalizer.ini  php_http_normalizer.cpp
src/: http_normalizer.cpp
tests/: http_normalizer_test.cpp
